# gemma-prover

./: .gitignore  README.md  pyproject.toml
src/: helper.py
src/notebooks/: analysis.ipynb  prelim.ipynb
src/utils/: dataset_handler.py  lean_validator.py  llm_client.py  model_analysis.py  setup.py
